config/mgmt/build/auth-infra/dex/ingress.ytt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dex
    namespace: dex
    annotations:
        ingress.kubernetes.io/force-ssl-redirect: "true"
        projectcontour.io/tls-cert-namespace: secure-ingress
spec:
    tls:
        - hosts:
            - dex.yaml.tv
          secretName: wildcard-yaml-tv
    rules:
        - host: dex.yaml.tv
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: dex
                        port:
                            name: dex
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCbHpEckpmU3pEaXJMVUEv
[...]
            ZfrazptzSJfe8J9gMDDs6RJp//kbMWbXf/HffY3UBL+G9WZma/1q0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-04-11T21:31:17Z"
    mac: ENC[AES256_GCM,data:EOSFOZleSOCLjm/RkFNambE6bx2p9cwU5iKbjEDtCymQlCMUbX2yvYmy0APicCuqUNjICCuwRNoWEM2MKGyF9tcJzkw8dF69DOp41z8VPmPrBVBTsqY43OclqJrAiW1OA/ITfqH1JRkkQBNkDUHkql8JqETf0CCbjOPQatzyQSk=,iv:CWszDh93sa177rjjgCafQJbe0Kde6j2UonZ8G+9yxcs=,tag:WxDx283DL5LhhMINxKcAwA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
